# template_du_jour

./: .gitignore  README.md  functions.py  instructions.md  pyproject.toml  script.py  slurm_job_array.sh
